--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h2>Latest Articles</h2>
             <ul>
                 <li><a href="#">R-Squared, the statistic which refuses to take a hint</a></li>
-                <li><a href="#">P-Values, pay no attention to the Statistician behind the curtain</a></li>
+                <li><a href="P-Values, pay no attention to the Statistician behind the curtain.html">P-Values, pay no attention to the Statistician behind the curtain</a></li>
                 <li><a href="#">My Central Bank's monetary policy is superior to your Central Bank's monetary policy</a></li>
                 <li><a href="#">DSGE: Snake Oil for Economists?</a></li>
             </ul>
