Added email to footer

--- a/P-Values, pay no attention to the Statistician behind the curtain.html
+++ b/P-Values, pay no attention to the Statistician behind the curtain.html
@@ -248,7 +248,7 @@ In this case, if the sample mean $\bar{X}$ is exactly equal to the population me
             </article>
         </main>
         <footer>
-            <p></p>
+            <p>Questions, Quotes, and Queries: notquiteoptimal@gmail.com </p>
         </footer>
         <script>
             MathJax = {
