Edited Footer, Changed Math

--- a/P-Values, pay no attention to the Statistician behind the curtain.html
+++ b/P-Values, pay no attention to the Statistician behind the curtain.html
@@ -136,7 +136,7 @@ The bigger the difference the more surprised you would be, as such the lower the
 <p>For example, the equation for the right-tail test statistic is as follows:
 $$p=\Pr(T\geq t \mid H_0)$$
 For a left-tail test statistic we have the following:
-$$p=\Pr(T\geq t \mid H_0)$$
+$$p=\Pr(T\leq t \mid H_0)$$
 It should be clear how this equation reconciles with the above definition.</p>
 <p>Graphically, we can imagine the following normal distribution:
 <img src="Pasted Images/Pasted image 20241015234742.png" alt="Alt Text" style="width: 50%; height: auto; display: block; margin: auto;">
@@ -248,7 +248,7 @@ In this case, if the sample mean $\bar{X}$ is exactly equal to the population me
             </article>
         </main>
         <footer>
-            <p>Questions, Quotes, and Queries: notquiteoptimal@gmail.com </p>
+            <p>Queries, Quibbles, and Quotes: notquiteoptimal@gmail.com </p>
         </footer>
         <script>
             MathJax = {
