--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </main>
 
     <footer>
-        <p>Questions, Quotes, and Queries: notquiteoptimal@gmail.com</p>
+        <p>Queries, Quibbles, and Quotes: notquiteoptimal@gmail.com</p>
     </footer>
 </body>
 </html>
