--- a/How I think about Instrumental Variables - The Good, the Bad and the Ugly..html
+++ b/How I think about Instrumental Variables - The Good, the Bad and the Ugly..html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-        <title>How I Think About Instrumental Variables - The Good, The Bad And The Ugly.</title>
+        <title>How I Think About Instrumental Variables: The Good, The Bad And The Ugly</title>
         <style>
             body {
                 font-family: monospace;
