--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section id="articles">
             <h2>Latest Articles</h2>
             <ul>
-                <li><a href="#">R-Squared, the statistic which refuses to take a hint</a></li>
+                <li><a href="How-I-Think-About-Instrumental-Variables-The-Good-The-Bad-And-The-Ugly">How I Think About Instrumental Variables: The Good, The Bad And The Ugly</a></li>
                 <li><a href="P-Values, pay no attention to the Statistician behind the curtain.html">P-Values, pay no attention to the Statistician behind the curtain</a></li>
                 <li><a href="#">My Central Bank's monetary policy is superior to your Central Bank's monetary policy</a></li>
                 <li><a href="#">DSGE: Snake Oil for Economists?</a></li>
