--- a/How-I-Think-About-Instrumental-Variables-The-Good-The-Bad-And-The-Ugly.html
+++ b/How-I-Think-About-Instrumental-Variables-The-Good-The-Bad-And-The-Ugly.html
@@ -226,7 +226,7 @@ $$=\frac{C(\hat{\rho Z}, Y)}{V(\hat{\rho}Z)}$$
 Notice now what is inside the parentheses: $\hat{\rho}Z$, which are the fitted values from the first-stage of the regression. We are thus, no longer, using $X$, we are using its fitted values. Recall that:
 $$X_i = \mu + \rho Z_i \Leftrightarrow \hat{X}_i + \eta_i$$
 and,
-$$\\hat{\beta}_{1(\text{IV})} = \frac{C(\hat{\rho} Z, Y)}{V(\hat{\rho} Z)}$$
+$$\hat{\beta}_{1(\text{IV})} = \frac{C(\hat{\rho} Z, Y)}{V(\hat{\rho} Z)}$$
 Then the 2SLS estimator is:
 $$\hat{\beta}_{1(\text{IV})} = \frac{C(\hat{\rho} Z, Y)}{V(\hat{\rho} Z)}$$
 What this coefficient allows us to know is that:
