--- a/How-I-Think-About-Instrumental-Variables-The-Good-The-Bad-And-The-Ugly.html
+++ b/How-I-Think-About-Instrumental-Variables-The-Good-The-Bad-And-The-Ugly.html
@@ -138,13 +138,13 @@ $$\underbrace{X_i}_\text{total variation} = \underbrace{\mu \: \:+ \: \: \rho Z_
 <hr />
 <p>Thus, we have two equations, one where we isolate our independent variable, and one where we isolate our dependent variable:</p>
 <ol>
-    <li>$\( Y = \alpha + \beta X_i + \epsilon_i \)$</li>
-    <li>$\( X_i = \mu + \rho Z_i + \eta_i \)$</li>
+    <li>$Y=\alpha + \beta X_i + \epsilon_i$</li>
+    <li>$X_i = \mu + \rho Z_i + \eta_i$</li>
 </ol>
 <p>Additionally, based on our two previously described conditions for IV:</p>
 <ol>
-    <li><strong>Exogeneity</strong>: $\( C(Z, \epsilon) = 0 \)$</li>
-    <li><strong>Relevance</strong>: $\( \rho \neq 0 \)$</li>
+    <li><strong>Exogeneity</strong>: $C(Z,\epsilon)=0$</li>
+    <li><strong>Relevance</strong>: $\rho \neq 0$</li>
 </ol>
 <p>If we define $\rho$ as being equal to the ratio of covariance between $Z$ and $X$, which we then standardised by our $Z$, we get the following equation:
 $$\hat{\rho}=\frac{C(Z,X)}{V(Z)}$$
